CustomerServiceImpl tests #27